@@ -118,9 +118,8 @@ void do_run(
 	std::wstring wcmd;
 	while(true)
 	{
-		std::getline(std::wcin, wcmd); // TODO: It's blocking...
-
-		//boost::to_upper(wcmd);
+		if (!std::getline(std::wcin, wcmd))		// TODO: It's blocking...
+			wcmd = L"EXIT";						// EOF, handle as EXIT
 
 		if(boost::iequals(wcmd, L"EXIT") || boost::iequals(wcmd, L"Q") || boost::iequals(wcmd, L"QUIT") || boost::iequals(wcmd, L"BYE"))
 		{
